--- a/Root/style.css
+++ b/Root/style.css
@@ -1,3 +1,7 @@
+:root {
+  --pixel-size: 6;
+}
+
 body {
   text-align: center;
   background-color: gray;
@@ -5,4 +9,29 @@ body {
 
 canvas {
   border: 1px solid black;
+}
+
+.Characters {
+  width: calc(18px * var(--pixel-size));
+  height: calc(18px * var(--pixel-size));
+  background: wheat;
+  overflow: hidden;
+}
+
+.Spritesheet {
+  animation: moveSpritesheet 1s steps(7) infinite;
+  width: calc(192px * var(--pixel-size));
+}
+
+.pixelart {
+  image-rendering: pixelated;
+}
+
+@keyframes moveSpritesheet {
+  from {
+    transform: translate3d(0px, 0, 0)
+  }
+  to {
+    transform: translate3d(-100%, 0, 0)
+  }
 }
