--- a/Root/style.css
+++ b/Root/style.css
@@ -1,5 +1,5 @@
 :root {
-  --pixel-size: 6;
+  --pixel-size: 5;
 }
 
 body {
@@ -14,8 +14,10 @@ canvas {
 .Characters {
   width: calc(18px * var(--pixel-size));
   height: calc(18px * var(--pixel-size));
-  background: wheat;
   overflow: hidden;
+  position: absolute;
+  top: 645px;
+  left: 1225px;
 }
 
 .Spritesheet {
@@ -29,7 +31,7 @@ canvas {
 
 @keyframes moveSpritesheet {
   from {
-    transform: translate3d(0px, 0, 0)
+    transform: translate3d(-16px, 0, 0)
   }
   to {
     transform: translate3d(-100%, 0, 0)
