the image is slowly there it stays but leaves

--- a/Root/style.css
+++ b/Root/style.css
@@ -9,6 +9,9 @@ body {
 
 canvas {
   border: 1px solid black;
+  background-image: url("draculas-castle.jpg");
+  background-position: center;
+  background-repeat: repeat;
 }
 
 .Characters {
