--- a/Root/style.css
+++ b/Root/style.css
@@ -1,5 +1,7 @@
 :root {
   --pixel-size: 5;
+  --pos-y: 647px;
+  --pos-x: 810px;
 }
 
 body {
@@ -20,8 +22,8 @@ background
   height: calc(18px * var(--pixel-size));
   overflow: hidden;
   position: absolute;
-  top: 645px;
-  left: 1225px;
+  top: var(--pos-y);
+  left: var(--pos-x);
 }
 
 .Spritesheet {
