--- a/Root/style.css
+++ b/Root/style.css
@@ -7,7 +7,6 @@ body {
 
 canvas {
   border: 1px solid;
-  background-image: url("Elements/Assets/draculas-castle.jpg");
+  background-image: url("Elements/Assets/canvasback.png");
   background-position: center;
-  background-size: 1800px;
 }
